added the nav icon and navroutes compoennt form

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,6 @@
-<div>
-  <img src="assets/images/Logo.png" alt="Logo" />
-  <p>navbar works!</p>
+<div class="flex py-8 px-32">
+  <div class="flex gap-2 items-center">
+    <img src="assets/images/Logo.svg" alt="Logo" class="w-5" />
+    <div class="text-2xl font-bold font-mono">Uzair</div>
+  </div>
 </div>
