--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,15 @@
-<div class="flex py-8 px-32">
+<div class="flex py-8 px-32 justify-between">
   <div class="flex gap-2 items-center">
     <img src="assets/images/Logo.svg" alt="Logo" class="w-5" />
     <div class="text-2xl font-bold font-mono">Uzair</div>
+  </div>
+  <div class="flex gap-4 items-center">
+    <span
+      *ngFor="let route of navRoutes"
+      [routerLink]="route.path"
+      class="text-lg font-medium cursor-pointer text-white"
+    >
+      <span class="text-purple-500 pr-1">#</span>{{ route.name }}
+    </span>
   </div>
 </div>
