added custom colors

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="flex py-8 px-32 justify-between">
   <div class="flex gap-2 items-center">
     <img src="assets/images/Logo.svg" alt="Logo" class="w-5" />
-    <div class="text-2xl font-bold font-mono">Uzair</div>
+    <div class="text-2xl font-bold">Uzair</div>
   </div>
   <div class="flex gap-4 items-center">
     <span
