--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,13 +3,13 @@
     <img src="assets/images/Logo.svg" alt="Logo" class="w-5" />
     <div class="text-2xl font-bold">Uzair</div>
   </div>
-  <div class="flex gap-4 items-center">
+  <div class="flex gap-10 items-center">
     <span
       *ngFor="let route of navRoutes"
       [routerLink]="route.path"
-      class="text-lg font-medium cursor-pointer text-white"
+      class="text-xl font-medium cursor-pointer text-white"
     >
-      <span class="text-purple-500 pr-1">#</span>{{ route.name }}
+      <span class="text-purple pr-1">#</span>{{ route.name }}
     </span>
   </div>
 </div>
