--- a/src/app/components/master/master.component.html
+++ b/src/app/components/master/master.component.html
@@ -1,3 +1,3 @@
 <div class="px-32 flex flex-col">
-  <div class="h-[500px]"><app-hero></app-hero></div>
+  <div class="h-[500px]"><app-home></app-home></div>
 </div>
