--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,15 @@
 <div>
-  <div class="h-[500px]"><app-hero></app-hero></div>
+  <div class=""><app-hero></app-hero></div>
+  <div class="flex justify-between items-center">
+    <div class="mt-24 mb-12 w-2/3 text-2xl flex">
+      <span class="text-purple pr-1">#</span>projects
+      <div class="border-t-2 border-purple px-96 mt-4 ml-2"></div>
+    </div>
+    <div>
+      <button class="text-gray font-bold py-2 px-2">View Here -></button>
+    </div>
+  </div>
+  <div>
+    <app-project-card></app-project-card>
+  </div>
 </div>
