added the project card compoennt

--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,1 +1,21 @@
-<p>project-card works!</p>
+<div class="flex gap-2">
+  <div class="border border-gray flex flex-col">
+    <img src="assets/images/thumbnail.svg" />
+    <div
+      class="border-b border-gray text-base px-4 py-2 whitespace-normal break-words text-gray"
+    >
+      HTML FLASK Python Flask
+    </div>
+    <div class="p-4">
+      <div class="flex flex-col gap-2">
+        <div class="text-2xl">Repo Name</div>
+        <small class="text-gray whitespace-normal break-words line-clamp-2"
+          >Minecraft servers hosting
+        </small>
+      </div>
+    </div>
+    <div class="mx-4 mb-4">
+      <button class="border border-gray px-4 py-2 text-gray">Github -></button>
+    </div>
+  </div>
+</div>
