added the skills car

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,4 +12,14 @@
   <div>
     <app-project-card></app-project-card>
   </div>
+  <div>
+    <div class="mt-24 mb-12 w-2/4 text-2xl flex">
+      <span class="text-purple pr-1">#</span>skills
+      <div class="border-t-2 border-purple px-64 mt-4 ml-2"></div>
+    </div>
+    <div class="flex">
+      <img src="assets/images/shapes.svg" width="500" />
+      <app-skills-card></app-skills-card>
+    </div>
+  </div>
 </div>
