--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,5 +1,5 @@
-<div class="flex gap-2">
-  <div class="border border-gray flex flex-col">
+<div class="flex gap-4">
+  <div class="border border-gray flex flex-col w-1/4">
     <img src="assets/images/thumbnail.svg" />
     <div
       class="border-b border-gray text-base px-4 py-2 whitespace-normal break-words text-gray"
@@ -8,7 +8,7 @@
     </div>
     <div class="p-4">
       <div class="flex flex-col gap-2">
-        <div class="text-2xl">Repo Name</div>
+        <div class="text-xl">Repo Name</div>
         <small class="text-gray whitespace-normal break-words line-clamp-2"
           >Minecraft servers hosting
         </small>
