--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -2,8 +2,8 @@
   <div class="flex justify-between items-center h-[700px]">
     <div class="flex flex-col gap-8 mt-32">
       <div class="text-4xl w-2/3 font-medium tracking-wider">
-        Uzair is a <span class="text-purple">web designer</span> and
-        <span class="text-purple">front-end developer</span>
+        Uzair is a <span class="text-purple">web developer</span> and
+        <span class="text-purple">react native developer</span>
       </div>
       <div class="text-gray w-2/3 text-xl">
         He crafts responsive websites where technologies meet creativity
@@ -23,7 +23,7 @@
       >
         <span class="w-4 h-4 bg-purple shadow-purple shadow-xl"></span>
         Currently working on
-        <span class="font-bold">Portfolio</span>
+        <span class="font-bold text-white">Portfolio</span>
       </div>
     </div>
   </div>
