--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,4 +22,10 @@
       <app-skills-card></app-skills-card>
     </div>
   </div>
+  <div>
+    <div class="mt-24 mb-12 w-2/4 text-2xl flex">
+      <span class="text-purple pr-1">#</span>about-me
+      <div class="border-t-2 border-purple px-64 mt-4 ml-2"></div>
+    </div>
+  </div>
 </div>
