added the skilss area

--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -1,1 +1,17 @@
-<p>about-me works!</p>
+<div class="w-2/3 flex flex-col gap-8 text-lg text-gray pr-24">
+  <div>Hello, i’m Uzair!</div>
+  <div>
+    I’m a self-taught front-end developer based in Lahore, Pakistan. I can
+    develop responsive websites from scratch and raise them into modern
+    user-friendly web experiences.
+  </div>
+  <div>
+    Transforming my creativity and knowledge into a websites has been my passion
+    for over a year. I have been helping various clients to establish their
+    presence online. I always strive to learn about the newest technologies and
+    frameworks.
+  </div>
+  <div>
+    <button class="border border-purple text-white p-2">Read more -></button>
+  </div>
+</div>
