--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,9 +1,9 @@
 <div>
   <div class="flex justify-between items-center h-[700px]">
     <div class="flex flex-col gap-8 mt-32">
-      <div class="text-4xl w-2/3 font-medium tracking-wider">
-        Uzair is a <span class="text-purple">web developer</span> and
-        <span class="text-purple">react native developer</span>
+      <div class="text-4xl w-2/3 font-medium tracking-widest">
+        Uzair is a <span class="text-purple">react native </span> and
+        <span class="text-purple">web developer</span>
       </div>
       <div class="text-gray w-2/3 text-xl">
         He crafts responsive websites where technologies meet creativity
