contact us is formed

--- a/src/app/components/contactus/contactus.component.html
+++ b/src/app/components/contactus/contactus.component.html
@@ -1,1 +1,25 @@
-<p>contactus works!</p>
+<div class="flex justify-between items-center">
+  <div class="w-2/4 text-lg text-gray">
+    I’m interested in freelance opportunities. However, if you have other
+    requests or questions, don’t hesitate to contact me.
+  </div>
+
+  <div class="flex flex-col border border-gray-300 p-4">
+    <div class="text-xl font-medium">Message me here</div>
+
+    <a
+      class="flex gap-2 items-center mt-4"
+      href="mailto:uzairmaqsood451@gmail.com"
+    >
+      <span class="material-icons text-gray">email</span>
+      <span class="text-sm text-gray"
+        >uzairmaqsood451{{ "&#64;" }}gmail.com</span
+      >
+    </a>
+
+    <a class="flex gap-2 items-center mt-4" href="tel:+923044979487">
+      <span class="material-icons text-gray">phone</span>
+      <span class="text-sm text-gray">+92 304 4979487</span>
+    </a>
+  </div>
+</div>
