--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -32,4 +32,11 @@
       <app-about-me></app-about-me>
     </div>
   </div>
+  <div>
+    <div class="mt-24 mb-12 w-2/4 text-2xl flex">
+      <span class="text-purple pr-1">#</span>contacts
+      <div class="border-t-2 border-purple px-80 mt-4 ml-2"></div>
+    </div>
+    <app-contactus></app-contactus>
+  </div>
 </div>
