added footer and contact us

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,28 @@
-<p>footer works!</p>
+<div>
+  <div
+    class="border-t border-gray my-16 h-44 px-32 flex justify-between items-center"
+  >
+    <div class="w-2/3">
+      <div class="flex gap-2 items-center">
+        <img src="assets/images/Logo.svg" alt="Logo" class="w-4" />
+        <div class="text-lg">
+          Uzair<span class="text-sm text-gray pl-3"
+            >uzairmaqsood451{{ "&#64;" }}gmail.com</span
+          >
+        </div>
+      </div>
+      <div class="text-base my-5">react native and web developer</div>
+    </div>
+    <div class="flex flex-col items-center">
+      <div class="text-xl">Media</div>
+      <div class="flex items-center justify-center mt-2 gap-2">
+        <div class="material-icons">facebook</div>
+        <div class="material-icons">mail</div>
+        <div class="material-icons">phone</div>
+      </div>
+    </div>
+  </div>
+  <div class="flex justify-center text-base text-gray mb-8">
+    © Copyright 2024. Made by Uzair
+  </div>
+</div>
