--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -6,7 +6,8 @@
         <span class="text-purple">web developer</span>
       </div>
       <div class="text-gray w-2/3 text-xl">
-        He crafts responsive websites where technologies meet creativity
+        He crafts responsive websites and hybrid mobile apps where technologies
+        meet creativity
       </div>
       <div>
         <button
