update the flex

--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,5 +1,5 @@
 <div class="flex gap-4">
-  <div class="border border-gray flex flex-col w-1/4">
+  <div class="border border-gray flex flex-col w-1/4 shadow-md shadow-gray">
     <img src="assets/images/thumbnail.svg" />
     <div
       class="border-b border-gray text-base px-4 py-2 whitespace-normal break-words text-gray"
