--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,1 +1,12 @@
-<p>work works!</p>
+<div class="h-screen">
+  <div class="flex flex-col gap-4 my-10">
+    <div class="text-4xl"><span class="text-purple">/</span>projects</div>
+    <div>List of my projects</div>
+  </div>
+  <div class="flex flex-col gap-8 my-10 flex-wrap">
+    <div class="text-2xl"><span class="text-purple">#</span>completed-apps</div>
+    <div>
+      <app-project-card></app-project-card>
+    </div>
+  </div>
+</div>
