made the about me page

--- a/src/app/components/about-me-page/about-me-page.component.html
+++ b/src/app/components/about-me-page/about-me-page.component.html
@@ -1,1 +1,10 @@
-<p>about-me-page works!</p>
+<div class="h-screen">
+  <div class="flex flex-col gap-4 my-10">
+    <div class="text-4xl"><span class="text-purple">/</span>about-me</div>
+    <div class="text-lg">Who am i?</div>
+  </div>
+  <div class="flex flex-row-reverse">
+    <img src="assets/images/shapes.svg" width="500" />
+    <app-about-me></app-about-me>
+  </div>
+</div>
