--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,6 +31,9 @@
       <img src="assets/images/shapes.svg" width="500" />
       <app-about-me></app-about-me>
     </div>
+    <div class="my-8 text-lg">
+      <button class="border border-purple text-white p-2">Read more -></button>
+    </div>
   </div>
   <div>
     <div class="mt-24 mb-12 w-2/4 text-2xl flex">
