--- a/src/app/components/about-me-page/about-me-page.component.html
+++ b/src/app/components/about-me-page/about-me-page.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen">
+<div class="">
   <div class="flex flex-col gap-4 my-10">
     <div class="text-4xl"><span class="text-purple">/</span>about-me</div>
     <div class="text-lg">Who am i?</div>
