--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,1 +1,10 @@
-<p>contacts works!</p>
+<div class="">
+  <div class="flex flex-col gap-4 my-10">
+    <div class="text-4xl"><span class="text-purple">/</span>contacts</div>
+    <div class="text-lg">Who am i?</div>
+  </div>
+  <div><app-contactus></app-contactus></div>
+  <div class="flex flex-col gap-4 my-10">
+    <div class="text-2xl"><span class="text-purple">#</span>all-media</div>
+  </div>
+</div>
