--- a/src/app/components/contactus/contactus.component.html
+++ b/src/app/components/contactus/contactus.component.html
@@ -4,7 +4,7 @@
     requests or questions, don’t hesitate to contact me.
   </div>
 
-  <div class="flex flex-col border border-gray-300 p-4">
+  <div class="flex flex-col border border-gray p-4">
     <div class="text-xl font-medium">Message me here</div>
 
     <a
