--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen">
+<div class="">
   <div class="flex flex-col gap-4 my-10">
     <div class="text-4xl"><span class="text-purple">/</span>projects</div>
     <div class="text-lg">List of my projects</div>
