--- a/src/app/components/about-me-page/about-me-page.component.html
+++ b/src/app/components/about-me-page/about-me-page.component.html
@@ -3,8 +3,8 @@
     <div class="text-4xl"><span class="text-purple">/</span>about-me</div>
     <div class="text-lg">Who am i?</div>
   </div>
-  <div class="flex flex-row-reverse">
-    <img src="assets/images/shapes.svg" width="500" />
+  <div class="flex flex-row-reverse items-center">
+    <img src="assets/images/about_me.svg" width="1000" />
     <app-about-me></app-about-me>
   </div>
   <div class="flex flex-col mt-32 mb-24 gap-8">
