--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,10 +25,10 @@
   <div>
     <div class="mt-24 mb-12 w-2/4 text-2xl flex">
       <span class="text-purple pr-1">#</span>about-me
-      <div class="border-t-2 border-purple px-80 mt-4 ml-2"></div>
+      <div class="border-t-2 border-purple px-64 mt-4 ml-2"></div>
     </div>
-    <div class="flex flex-row-reverse">
-      <img src="assets/images/shapes.svg" width="500" />
+    <div class="flex flex-row-reverse items-center">
+      <img src="assets/images/about_me.svg" width="1000" />
       <app-about-me></app-about-me>
     </div>
     <div class="my-8 text-lg">
