--- a/src/app/components/about-me-page/about-me-page.component.html
+++ b/src/app/components/about-me-page/about-me-page.component.html
@@ -4,10 +4,10 @@
     <div class="text-lg">Who am i?</div>
   </div>
   <div class="flex flex-row-reverse items-center">
-    <img src="assets/images/about_me.svg" width="1000" />
+    <img src="assets/images/about_me.svg" />
     <app-about-me></app-about-me>
   </div>
-  <div class="flex flex-col mt-32 mb-24 gap-8">
+  <div class="flex flex-col my-24 gap-8">
     <div class="text-2xl"><span class="text-purple">#</span>skills</div>
     <app-skills-card></app-skills-card>
   </div>
