--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,7 +11,7 @@
           >
         </div>
       </div>
-      <div class="text-base my-5">react native and web developer</div>
+      <div class="text-base my-5">software engineer</div>
     </div>
     <div class="flex flex-col items-center">
       <div class="text-xl">Media</div>
