--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,44 +1,59 @@
 <div>
   <div class=""><app-hero></app-hero></div>
   <div class="flex justify-between items-center">
-    <div class="mt-24 mb-12 w-2/3 text-2xl flex">
+    <div
+      class="mt-12 mb-8 md:mt-24 md:mb-12 md:w-2/3 w-full md:text-2xl text-lg flex"
+    >
       <span class="text-purple pr-1">#</span>projects
-      <div class="border-t-2 border-purple px-96 mt-4 ml-2"></div>
+      <div class="border-t-2 border-purple md:px-96 mt-4 ml-2"></div>
     </div>
     <div>
-      <button class="text-gray font-bold py-2 px-2">View Here -></button>
+      <button class="text-gray font-bold md:p-2 w-24">View Here -></button>
     </div>
   </div>
   <div>
     <app-project-card></app-project-card>
   </div>
   <div>
-    <div class="mt-24 mb-12 w-2/4 text-2xl flex">
+    <div
+      class="mt-12 mb-8 md:mt-24 md:mb-12 md:w-2/3 w-full md:text-2xl text-lg flex"
+    >
       <span class="text-purple pr-1">#</span>skills
-      <div class="border-t-2 border-purple px-64 mt-4 ml-2"></div>
+      <div class="border-t-2 border-purple md:px-64 mt-4 ml-2"></div>
     </div>
     <div class="flex">
-      <img src="assets/images/shapes.svg" width="500" />
+      <img class="hidden md:flex" src="assets/images/shapes.svg" width="500" />
       <app-skills-card></app-skills-card>
     </div>
   </div>
-  <div>
-    <div class="mt-24 mb-12 w-2/4 text-2xl flex">
+  <div class="md:block flex flex-col gap-8">
+    <div
+      class="mt-12 md:mt-24 md:mb-12 md:w-2/3 w-full md:text-2xl text-lg flex"
+    >
       <span class="text-purple pr-1">#</span>about-me
-      <div class="border-t-2 border-purple px-64 mt-4 ml-2"></div>
+      <div class="border-t-2 border-purple md:px-64 md:mt-4 ml-2"></div>
     </div>
-    <div class="flex flex-row-reverse items-center">
-      <img src="assets/images/about_me.svg" width="1000" />
+    <div
+      class="flex md:flex-row-reverse flex-col-reverse items-center justify-center"
+    >
+      <img
+        src="assets/images/about_me.svg"
+        class="md:w-full w-64 md:mt-0 mt-10"
+      />
       <app-about-me></app-about-me>
     </div>
     <div class="my-8 text-lg">
-      <button class="border border-purple text-white p-2">Read more -></button>
+      <button class="border border-purple text-white p-2 md:text-base text-sm">
+        Read more ->
+      </button>
     </div>
   </div>
   <div>
-    <div class="mt-24 mb-12 w-2/4 text-2xl flex">
+    <div
+      class="mt-12 mb-8 md:mt-24 md:mb-12 md:w-2/3 w-full md:text-2xl text-lg flex"
+    >
       <span class="text-purple pr-1">#</span>contacts
-      <div class="border-t-2 border-purple px-32 mt-4 ml-2"></div>
+      <div class="border-t-2 border-purple md:px-32 mt-4 ml-2"></div>
     </div>
     <app-contactus></app-contactus>
   </div>
