--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,10 +1,14 @@
 <div class="">
   <div class="flex flex-col gap-4 my-10">
-    <div class="text-4xl"><span class="text-purple">/</span>projects</div>
-    <div class="text-lg">List of my projects</div>
+    <div class="md:text-4xl sm:text-2xl text-lg">
+      <span class="text-purple">/</span>projects
+    </div>
+    <div class="md:text-lg sm:text-base text-sm">List of my projects</div>
   </div>
   <div class="flex flex-col gap-8 my-10 flex-wrap">
-    <div class="text-2xl"><span class="text-purple">#</span>completed-apps</div>
+    <div class="md:text-2xl sm:text-xl text-lg">
+      <span class="text-purple">#</span>completed-apps
+    </div>
     <div>
       <app-project-card></app-project-card>
     </div>
