--- a/src/app/components/contacts/contacts.component.html
+++ b/src/app/components/contacts/contacts.component.html
@@ -1,10 +1,14 @@
 <div class="">
   <div class="flex flex-col gap-4 my-10">
-    <div class="text-4xl"><span class="text-purple">/</span>contacts</div>
-    <div class="text-lg">How can you contact?</div>
+    <div class="md:text-4xl sm:text-2xl text-lg">
+      <span class="text-purple">/</span>contacts
+    </div>
+    <div class="md:text-lg sm:text-base text-sm">How can you contact?</div>
   </div>
   <div><app-contactus></app-contactus></div>
   <div class="flex flex-col gap-4 my-10">
-    <div class="text-2xl"><span class="text-purple">#</span>all-media</div>
+    <div class="md:text-2xl sm:text-xl text-lg">
+      <span class="text-purple">#</span>all-media
+    </div>
   </div>
 </div>
