--- a/src/app/components/contactus/contactus.component.html
+++ b/src/app/components/contactus/contactus.component.html
@@ -1,11 +1,11 @@
-<div class="flex justify-between items-center">
-  <div class="w-2/4 text-lg text-gray">
+<div class="flex md:flex-row flex-col justify-between md:items-center gap-4">
+  <div class="md:w-2/4 md:text-lg sm:text-base text-sm text-gray">
     I’m interested in freelance opportunities. However, if you have other
     requests or questions, don’t hesitate to contact me.
   </div>
 
   <div class="flex flex-col border border-gray p-4">
-    <div class="text-xl font-medium">Message me here</div>
+    <div class="md:text-xl text-base font-medium">Message me here</div>
 
     <a
       class="flex gap-2 items-center mt-4"
