--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,25 +1,29 @@
 <div>
-  <div class="flex justify-between items-center h-[700px]">
-    <div class="flex flex-col gap-8 mt-32">
-      <div class="text-4xl w-2/3 font-medium tracking-widest">
+  <div
+    class="flex flex-col justify-center md:flex-row md:justify-between items-center md:h-[700px] h-[500px]"
+  >
+    <div class="flex flex-col md:gap-8 gap-4 md:mt-12">
+      <div
+        class="text-xl sm:text-2xl md:text-4xl w-2/3 font-medium tracking-widest"
+      >
         Uzair is a <span class="text-purple">software engineer </span>
       </div>
-      <div class="text-gray w-2/3 text-xl">
+      <div class="text-gray sm:w-2/3 text-sm sm:text-xl">
         He crafts responsive websites and hybrid mobile apps where technologies
         meet creativity
       </div>
       <div>
         <button
-          class="border border-purple p-4 text-lg cursor-pointer shadow-purple shadow-lg"
+          class="border border-purple md:p-4 sm:p-3 p-2 md:text-lg sm:text-base text-sm cursor-pointer shadow-purple shadow-lg"
         >
           Let's Connect !!
         </button>
       </div>
     </div>
-    <div class="flex flex-col items-center">
-      <img src="/assets/images/hero.svg" width="600" />
+    <div class="flex flex-col items-center md:mt-0 mt-10">
+      <img src="/assets/images/hero.svg" class="md:w-full sm:w-64 w-56" />
       <div
-        class="text-gray border border-gray flex items-center gap-2 text-xl px-2"
+        class="text-gray border border-gray flex items-center gap-2 md:text-xl sm:text-base text-sm px-2"
       >
         <span class="w-4 h-4 bg-purple shadow-purple shadow-xl"></span>
         Currently working on
