--- a/src/app/components/master/master.component.html
+++ b/src/app/components/master/master.component.html
@@ -1,3 +1,3 @@
-<div class="px-32 pb-32 flex flex-col">
+<div class="px-4 sm:px-24 md:px-32 md:pb-32 flex flex-col">
   <router-outlet></router-outlet>
 </div>
