--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,15 +1,18 @@
-<div class="flex gap-4">
-  <div class="border border-gray flex flex-col w-1/4 shadow-md shadow-gray">
+<div class="flex md:flex-row flex-col justify-center items-center gap-4">
+  <div
+    class="border border-gray flex flex-col md:w-1/4 w-full shadow-md shadow-gray"
+  >
     <img src="assets/images/thumbnail.svg" />
     <div
-      class="border-b border-gray text-base px-4 py-2 whitespace-normal break-words text-gray"
+      class="border-b border-gray md:text-base text-xs px-4 py-2 whitespace-normal break-words text-gray"
     >
       HTML FLASK Python Flask
     </div>
     <div class="p-4">
       <div class="flex flex-col gap-2">
-        <div class="text-xl">Repo Name</div>
-        <small class="text-gray whitespace-normal break-words line-clamp-2"
+        <div class="md:text-xl text-sm">Repo Name</div>
+        <small
+          class="text-gray whitespace-normal break-words line-clamp-2 md:text-base text-xs"
           >Minecraft servers hosting
         </small>
       </div>
