--- a/src/app/components/skills-card/skills-card.component.html
+++ b/src/app/components/skills-card/skills-card.component.html
@@ -1,8 +1,10 @@
 <div>
   <div class="border border-gray w-44">
-    <div class="border-b border-gray px-2 text-lg">Languages</div>
+    <div class="border-b border-gray px-2 md:text-lg text-base">Languages</div>
     <div>
-      <div class="text-base px-4 py-2 whitespace-normal break-words text-gray">
+      <div
+        class="md:text-base text-xs md:px-4 px-2 py-2 whitespace-normal break-words text-gray"
+      >
         HTML FLASK Python Flask
       </div>
     </div>
