--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,10 +5,10 @@
       class="mt-12 mb-8 md:mt-24 md:mb-12 md:w-2/3 w-full md:text-2xl text-lg flex"
     >
       <span class="text-purple pr-1">#</span>projects
-      <div class="border-t-2 border-purple md:px-96 mt-4 ml-2"></div>
+      <div class="border-t-2 border-purple lg:px-96 md:px-44 mt-4 ml-2"></div>
     </div>
     <div>
-      <button class="text-gray font-bold md:p-2 w-24">View Here -></button>
+      <button class="text-gray font-bold md:p-2 w-32">View Here -></button>
     </div>
   </div>
   <div>
