--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div>
-    <app-project-card></app-project-card>
+    <app-project-card [repos]="repos.splice(0, 4)"></app-project-card>
   </div>
   <div>
     <div
