--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -1,24 +1,31 @@
-<div class="flex md:flex-row flex-col justify-center items-center gap-4">
+<div class="flex md:flex-row flex-col flex-wrap items-center gap-10">
   <div
-    class="border border-gray flex flex-col md:w-1/4 w-full shadow-md shadow-gray"
+    *ngFor="let repo of repos"
+    class="border border-gray flex flex-col md:w-1/5 w-full shadow-md shadow-gray"
   >
-    <img src="assets/images/thumbnail.svg" />
+    <img src="assets/images/thumbnail.svg" alt="Repo Thumbnail" />
     <div
       class="border-b border-gray md:text-base text-xs px-4 py-2 whitespace-normal break-words text-gray"
     >
-      HTML FLASK Python Flask
+      {{ repo.language }}
     </div>
     <div class="p-4">
       <div class="flex flex-col gap-2">
-        <div class="md:text-xl text-sm">Repo Name</div>
+        <div class="md:text-xl text-sm">{{ repo.name }}</div>
+
         <small
           class="text-gray whitespace-normal break-words line-clamp-2 md:text-base text-xs"
-          >Minecraft servers hosting
+        >
+          {{ repo.description }}
         </small>
       </div>
     </div>
     <div class="mx-4 mb-4">
-      <button class="border border-gray px-4 py-2 text-gray">Github -></button>
+      <a [href]="repo.html_url" target="_blank">
+        <button class="border border-gray px-4 py-2 text-gray">
+          Github ->
+        </button>
+      </a>
     </div>
   </div>
 </div>
