--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -5,12 +5,12 @@
     </div>
     <div class="md:text-lg sm:text-base text-sm">List of my projects</div>
   </div>
-  <div class="flex flex-col gap-8 my-10 flex-wrap">
+  <div class="flex flex-col gap-8 my-10">
     <div class="md:text-2xl sm:text-xl text-lg">
       <span class="text-purple">#</span>completed-apps
     </div>
-    <div>
-      <app-project-card></app-project-card>
+    <div class="w-screen">
+      <app-project-card [repos]="repos"></app-project-card>
     </div>
   </div>
 </div>
