made the repos in the reverse order

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
       <button class="text-gray font-bold md:p-2 w-32">View Here -></button>
     </div>
   </div>
-  <div>
+  <div class="w-screen">
     <app-project-card [repos]="repos.splice(0, 4)"></app-project-card>
   </div>
   <div>
