update the repo thumbnail

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,8 +21,12 @@
       <span class="text-purple pr-1">#</span>skills
       <div class="border-t-2 border-purple md:px-64 mt-4 ml-2"></div>
     </div>
-    <div class="flex">
-      <img class="hidden md:flex" src="assets/images/shapes.svg" width="500" />
+    <div class="flex w-screen justify-between gap-32s">
+      <img
+        class="hidden md:block w-1/3"
+        src="assets/images/shapes.svg"
+        width="500"
+      />
       <app-skills-card></app-skills-card>
     </div>
   </div>
