--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -3,7 +3,11 @@
     *ngFor="let repo of repos"
     class="border border-gray flex flex-col md:w-1/5 w-full shadow-md shadow-gray"
   >
-    <img src="assets/images/thumbnail.svg" alt="Repo Thumbnail" />
+    <img
+      src="
+      assets/images/thumbnail.png"
+      alt="Repo Thumbnail"
+    />
     <div
       class="border-b border-gray md:text-base text-xs px-4 py-2 whitespace-normal break-words text-gray"
     >
