--- a/src/app/components/skills-card/skills-card.component.html
+++ b/src/app/components/skills-card/skills-card.component.html
@@ -1,11 +1,17 @@
-<div>
-  <div class="border border-gray w-44">
-    <div class="border-b border-gray px-2 md:text-lg text-base">Languages</div>
+<div class="flex gap-10 flex-wrap md:flex-row flex-col">
+  <div
+    *ngFor="let skill of skillset"
+    class="border border-gray md:w-1/4 w-full mb-4"
+  >
+    <div class="border-b border-gray px-2 md:text-lg text-base">
+      {{ skill.heading }}
+    </div>
+
     <div>
       <div
         class="md:text-base text-xs md:px-4 px-2 py-2 whitespace-normal break-words text-gray"
       >
-        HTML FLASK Python Flask
+        {{ skill.text }}
       </div>
     </div>
   </div>
