made the design perfect

--- a/src/app/components/about-me-page/about-me-page.component.html
+++ b/src/app/components/about-me-page/about-me-page.component.html
@@ -8,10 +8,7 @@
   <div
     class="flex md:flex-row-reverse flex-col-reverse items-center justify-center"
   >
-    <img
-      src="assets/images/about_me.svg"
-      class="md:w-full w-64 md:mt-0 mt-10"
-    />
+    <img src="assets/images/about_me.svg" class="md:w-96 w-64 md:mt-0 mt-10" />
     <app-about-me></app-about-me>
   </div>
   <div class="flex flex-col my-24 gap-8">
