--- a/src/app/components/contactus/contactus.component.html
+++ b/src/app/components/contactus/contactus.component.html
@@ -6,7 +6,6 @@
 
   <div class="flex flex-col border border-gray p-4">
     <div class="md:text-xl text-base font-medium">Message me here</div>
-
     <a
       class="flex gap-2 items-center mt-4"
       href="mailto:uzairmaqsood451@gmail.com"
@@ -20,6 +19,35 @@
     <a class="flex gap-2 items-center mt-4" href="tel:+923044979487">
       <span class="material-icons text-gray">phone</span>
       <span class="text-sm text-gray">+92 304 4979487</span>
+    </a>
+
+    <a
+      class="flex gap-2 items-center mt-4"
+      href="https://www.linkedin.com/in/uzair-maqsood-se1a6050267"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <img src="assets/images/Linkedin.svg" alt="LinkedIn Icon" />
+      <span class="text-sm text-gray">uzair-maqsood</span>
+    </a>
+
+    <a
+      class="flex gap-2 items-center mt-4"
+      href="https://github.com/OXAYR"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <img src="assets/images/Github.svg" alt="GitHub Icon" />
+      <span class="text-sm text-gray">OXAYR.git</span>
+    </a>
+    <a
+      class="flex gap-2 items-center mt-4"
+      href="https://www.fiverr.com/uzair_maqsood?public_mode=true7"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <span class="font-black text-gray">fiverr.</span>
+      <span class="text-sm text-gray">Uzair Maqsood</span>
     </a>
   </div>
 </div>
