--- a/src/app/components/skills-card/skills-card.component.html
+++ b/src/app/components/skills-card/skills-card.component.html
@@ -1,4 +1,4 @@
-<div class="flex gap-10 flex-wrap md:flex-row flex-col">
+<div class="flex gap-10 flex-wrap justify-end md:flex-row flex-col">
   <div
     *ngFor="let skill of skillset"
     class="border border-gray md:w-1/4 w-full mb-4"
