--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -13,11 +13,12 @@
         meet creativity
       </div>
       <div>
-        <button
+        <a
           class="border border-purple md:p-4 sm:p-3 p-2 md:text-lg sm:text-base text-sm cursor-pointer shadow-purple shadow-lg"
+          (click)="navigateToContacts()"
         >
           Let's Connect !!
-        </button>
+        </a>
       </div>
     </div>
     <div class="flex flex-col items-center md:mt-0 mt-10">
@@ -25,7 +26,9 @@
       <div
         class="text-gray border border-gray flex items-center gap-2 md:text-xl sm:text-base text-sm px-2"
       >
-        <span class="w-4 h-4 bg-purple shadow-purple shadow-xl"></span>
+        <span
+          class="w-4 h-4 bg-purple shadow-purple shadow-xl animate-pulse"
+        ></span>
         Currently working on
         <span class="font-bold text-white">Portfolio</span>
       </div>
