--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
     </div>
     <div>
       <button
-        class="text-gray font-bold md:p-2 w-32"
+        class="text-gray font-bold md:p-2 w-32 mt-0 md:mt-8"
         (click)="navigateToContacts('/work')"
       >
         View Here ->
