--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -4,7 +4,7 @@
   >
     <div class="flex flex-col md:gap-8 gap-4 md:mt-12">
       <div
-        class="text-xl sm:text-2xl md:text-4xl w-2/3 font-medium tracking-widest"
+        class="text-xl sm:text-2xl md:text-4xl w-3/4 md:w-2/3 font-medium tracking-widest"
       >
         Uzair is a <span class="text-purple">software engineer </span>
       </div>
