--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,14 +11,14 @@
     </div>
     <div>
       <button
-        class="text-gray font-bold md:p-2 w-32 mt-0 md:mt-8"
+        class="text-gray font-bold md:p-2 w-24 md:w-32 mt-3 md:mt-8"
         (click)="navigateToContacts('/work')"
       >
         View Here ->
       </button>
     </div>
   </div>
-  <div class="w-screen">
+  <div class="w-full md:w-screen">
     <app-project-card [repos]="repos.splice(0, 4)"></app-project-card>
   </div>
   <div>
